# IoT_mesh_network

./: .gitignore  README.md  fake_mqtt_publisher.sh
ESPs/Broker/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESPs/Broker/main/: CMakeLists.txt  device_info.h  idf_component.yml  main.c
ESPs/Broker/main/KWS/: keyword_spotting_model.cc  keyword_spotting_program.cc
ESPs/Broker/main/KWS/other/: audio_provider.cc  micro_model_settings.h
ESPs/Broker/main/Network/: Network_config.h  Network_inteface.h  Network_program.c
ESPs/Broker/main/Network/sendData/: sendData.c  sendData.h
ESPs/Broker/main/Network/socket/: socket.c  socket.h
ESPs/Broker/main/buzzer/: buzzer.c  buzzer.h  buzzer_config.h
ESPs/Broker/main/error_led/: error_led.c  error_led.h
ESPs/Broker/main/mqtt/: mqtt_config.h  mqtt_interface.h  mqtt_program.c
ESPs/Broker/main/uart/: uart_config.h  uart_interface.h  uart_program.c
ESPs/Node_1/node_1/: node_1.ino
ESPs/Node_2/node_2/: node_2.ino
rass/: mqtt.py
rpi-web-server/: app.py  project-readme.md  requirements.txt
rpi-web-server/static/: index.html  login.html  signup.html
rpi-web-server/static/css/: auth.css  style.css
rpi-web-server/static/js/: app.js  auth.js
